edc-ionos-s3-all/deployment/k8s/provider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
  labels:
    app: provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider
  template:
    metadata:
      labels:
        app: provider
    spec:
      containers:
      - name: provider
        image: quay.io/bcapper30/ionos-s3-provider
        ports:
        - containerPort: 8181
        - containerPort: 8182  
        - containerPort: 8282  
        - containerPort: 8283
        - containerPort: 8383
        volumeMounts:
        - name: provider-config-volume
          mountPath: "/app/resources/config.properties"
          subPath: "config.properties"
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"  
          limits:
            memory: "2Gi"
            cpu: "1"     
      volumes:
      - name: provider-config-volume
        configMap:
          name: provider-config
---

apiVersion: v1
kind: Service
metadata:
  name: provider
  labels:
    app: provider
spec:
  selector:
    app: provider
  ports:
  - name: api
    port: 8181
    targetPort: 8181
  - name: management
    port: 8182
    targetPort: 8182
  - name: protocol
    port: 8282
    targetPort: 8282
  - name: control
    port: 8283
    targetPort: 8283
  - name: public
    port: 8383
    targetPort: 8383
  type: ClusterIP

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: provider-management
  labels:
    app: provider
spec:
  to:
    kind: Service
    name: provider
  port:
    targetPort: management
  tls:
    termination: edge
